--- a/packages/themes/src/zen-sumi/tabs.css
+++ b/packages/themes/src/zen-sumi/tabs.css
@@ -58,7 +58,7 @@
    ============================================================================= */
 
 [data-style='zen-sumi'] [data-tabs-trigger] [data-tabs-icon] {
-  @apply text-paper-edge;
+  @apply text-ink-soft;
 }
 
 [data-style='zen-sumi'] [data-tabs-trigger]:hover:not(:disabled) [data-tabs-icon] {
